[package]
name = "advent_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
compact_str = "0.7.1"
num = "0.4.1"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.8.0"
vecmap-rs = "0.1.15"
